--- a/style.css
+++ b/style.css
@@ -5,17 +5,23 @@ font-family: 'Merriweather', serif;
 font-family: 'Raleway', sans-serif;
 */
 
+ body {
+    background-image: url('imgs/slotMachine.svg');
+    background-size: 100% 140%;
+    background-position: top center;
+    background-repeat: no-repeat;
 
+} 
 
-body {
-    background-image: url('https://images.unsplash.com/photo-1509316785289-025f5b846b35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1055&q=80');
-    background-size: cover;
+.slot-wrapper {
     display: grid;
+    min-width: 300px;
     margin: 0 auto;
-    margin-top: 50px;
-    height: 50vh;
-    width: 35vw;
+    margin-top: 25vh;
+    height: 72vh;
+    width: 30vw;
     grid-template-rows: 1fr 4fr 1fr;
+    
 }
 header {
     text-align: center;
@@ -28,6 +34,7 @@ main {
     /* grid-gap: 1em; */
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
+
 }
 footer {
     display: grid;
@@ -37,36 +44,34 @@ footer {
 }
 #top-bar {
     font-family: 'Montserrat', sans-serif;
+    margin-bottom: 10vh;
     color: black;
 }
-/* .doc {
-
-}
-.virgil {
-
-}
-.wyatt {
-
-} */
 .doc {
     background-image: url('imgs/doc.png');
-    background-size: 15vh;
+    background-size: 7vw 20vh;
     background-repeat: no-repeat;
     background-position: center;
     border: 1px solid black;
 }
+.img-default {
+    background-color: goldenrod;
+}
 .virgil {
     background-image: url('imgs/virgil.png');
-    background-size: 15vh;
+    background-size: 7vw 20vh;
     background-repeat: no-repeat;
     background-position: center;
     border: 1px solid black;
 }
 .wyatt {
     background-image: url('imgs/wyatt.png');
-    background-size: 15vh;
+    background-size: 7vw 20vh;
     background-repeat: no-repeat;
     background-position: center;
+    border: 1px solid black;
+}
+#left-reel, #right-reel, #middle-reel {
     border: 1px solid black;
 }
 #spinBtn {
