--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
 }
 main {
     display: grid;
-    grid-gap: 1em;
+    grid-gap: 2em;
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
 
@@ -38,6 +38,7 @@ footer {
     margin-top: 5vh;
     justify-items: center;
     align-items: center;
+    font-size: 1em;
 }
 #credits {
     color: white;
@@ -71,7 +72,7 @@ footer {
     font-size: 2em;
     text-align: center;
     background-color: #b69578;
-    border: 2px solid #987e66;
+    border: 10px double #987e66;
     color: white;
 }
 #spinBtn:hover {
@@ -79,9 +80,10 @@ footer {
 }
 #bet {
     display: block;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     justify-self: center;
     text-align: center;
+
 }
 #player-money {
     font-size: 1em;
